k8s/api/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: explana-api-svc
spec:
  selector:
    app: explana-api
  ports:
  - port: 80
    targetPort: 8080
